WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118320
[WK2] security/block-test.html fails when NetworkProcess is enabled
https://bugs.webkit.org/show_bug.cgi?id=118320
Summary
[WK2] security/block-test.html fails when NetworkProcess is enabled
Alexey Proskuryakov
Reported
2013-07-02 12:55:18 PDT
<
rdar://problem/14309423
>
Attachments
proposed fix
(2.24 KB, patch)
2013-07-02 12:57 PDT
,
Alexey Proskuryakov
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-07-02 12:57:41 PDT
Created
attachment 205939
[details]
proposed fix
Geoffrey Garen
Comment 2
2013-07-02 13:06:38 PDT
Comment on
attachment 205939
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2013-07-02 13:08:18 PDT
Committed <
http://trac.webkit.org/changeset/152317
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug