        security/block-test.html fails when NetworkProcess is enabled         https://bugs.webkit.org/show_bug.cgi?id=118320         <rdar://problem/14309423>

Reviewed by Geoff Garen.

        * NetworkProcess/NetworkResourceLoader.cpp:
        (WebKit::NetworkResourceLoader::wasBlocked):
        (WebKit::NetworkResourceLoader::cannotShowURL):
        Implemented missing ResourceHandleClient functions.



Canonical link: https://commits.webkit.org/136331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152317 268f45cc-cd09-0410-ab3c-d52691b4dbfc